Bug 506559 - External Tools plugin does not work in Windows
Summary: External Tools plugin does not work in Windows
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-03 21:28 UTC by Bill Goodman
Modified: 2025-07-05 23:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bill Goodman 2025-07-03 21:28:37 UTC
SUMMARY
Items specified in the External Tools plugin are not displayed in the Tools > External Tools menu.


STEPS TO REPRODUCE
1.  Open Tools > External Tools menu
 

OBSERVED RESULT
Menu shows "Configure ..." but no tools are listed.

EXPECTED RESULT
Expect to see tools listed as they are on Linux.

SOFTWARE/OS VERSIONS
Windows:  Windows 11 Pro 23H2

ADDITIONAL INFORMATION
Problem seen on nightly version (2025-07-01) of Kate .
Comment 1 Waqar Ahmed 2025-07-04 06:21:08 UTC
Its most likely because Kate is unable to find the tools on your system. When a tool isn't found, it is hidden.
Comment 2 Christoph Cullmann 2025-07-05 17:51:21 UTC
That is rather strange, they should just be appear there disabled.
Comment 3 Christoph Cullmann 2025-07-05 17:54:01 UTC
Ok, I see, they will not appear at all, if on first run the tools where not there, on can later re-add the default ones in the settings dialog.

That seems a bit suboptimal.
Comment 4 Bug Janitor Service 2025-07-05 18:06:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1804
Comment 5 Christoph Cullmann 2025-07-05 19:34:06 UTC
Git commit 54963d60c005a41a80ef05f99c655c46e347587c by Christoph Cullmann.
Committed on 05/07/2025 at 18:06.
Pushed by cullmann into branch 'master'.

add all tools, even the non-executable ones

they will now be disabled in updateActionState

M  +20   -22   addons/externaltools/kateexternaltoolsview.cpp

https://invent.kde.org/utilities/kate/-/commit/54963d60c005a41a80ef05f99c655c46e347587c
Comment 6 Christoph Cullmann 2025-07-05 20:23:28 UTC
Git commit cab37b66ae807b34da2f38fd09e6fdeebd7cbbf8 by Christoph Cullmann.
Committed on 05/07/2025 at 20:23.
Pushed by cullmann into branch 'release/25.08'.

add all tools, even the non-executable ones

they will now be disabled in updateActionState


(cherry picked from commit 54963d60c005a41a80ef05f99c655c46e347587c)

Co-authored-by: Christoph Cullmann <christoph@cullmann.dev>

M  +20   -22   addons/externaltools/kateexternaltoolsview.cpp

https://invent.kde.org/utilities/kate/-/commit/cab37b66ae807b34da2f38fd09e6fdeebd7cbbf8
Comment 7 Christoph Cullmann 2025-07-05 20:53:28 UTC
Thanks for reporting this.

Can be tried in the next nightly build, too.
Comment 8 Bill Goodman 2025-07-05 23:26:40 UTC
(In reply to Christoph Cullmann from comment #7)
> Thanks for reporting this.
> 
> Can be tried in the next nightly build, too.

I did not realize that tools had to be executable to be displayed. It appears that none of the tools are executable on my system, so no tools are ever displayed.

I had created a new tool which also had an invalid executable, so it did not display either. After fixing the executable reference, my tool displays OK.

I don't think I can test the fix above since none of the tools are executable on my system.

Thanks for the quick response!