add all tools, even the non-executable ones

they will now be disabled in updateActionState

BUG: 506559


(cherry picked from commit 54963d60c005a41a80ef05f99c655c46e347587c)

Co-authored-by: Christoph Cullmann <christoph@cullmann.dev>